--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
     "prepare": "husky install",
-    "dev": "concurrently \"npm run start:dev\" \"npm run build:watch\""
+    "dev": "concurrently \"npm run start:dev\" \"npm run build:watch\"",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "repository": "https://github.com/LindseyB/sturdy-engine",
   "keywords": [
@@ -28,6 +30,7 @@
   "author": "LindseyB",
   "license": "CC0-1.0",
   "devDependencies": {
+    "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.7",
     "@babel/preset-react": "^7.16.7",
     "@electron-forge/cli": "^6.0.0-beta.61",
@@ -35,12 +38,19 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.61",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.61",
     "@electron-forge/maker-zip": "^6.0.0-beta.61",
+    "@storybook/addon-actions": "^6.5.0-alpha.7",
+    "@storybook/addon-essentials": "^6.5.0-alpha.7",
+    "@storybook/addon-links": "^6.5.0-alpha.7",
+    "@storybook/builder-webpack5": "^6.5.0-alpha.7",
+    "@storybook/manager-webpack5": "^6.5.0-alpha.7",
+    "@storybook/react": "^6.5.0-alpha.7",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "concurrently": "^7.0.0",
     "electron": "^16.0.6",
     "eslint": "^8.6.0",
     "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-storybook": "^0.5.5",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.5",
     "prettier": "2.5.1",
