We don't need these paths in the context of a package.json

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start:dev": "ENVIRONMENT=dev electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
-    "build": "./node_modules/.bin/webpack",
-    "build:watch": "./node_modules/.bin/webpack-dev-server --hot",
+    "build": "webpack",
+    "build:watch": "webpack-dev-server --hot",
     "lint": "eslint \"src/*.js\"",
     "lint:fix": "eslint --fix \"src/*.js\"",
     "format": "prettier --check .",
