--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron-forge start",
-    "start:dev": "ENVIRONMENT=dev electron-forge start",
+    "start:dev": "cross-env ENVIRONMENT=dev electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "build": "webpack",
@@ -64,6 +64,7 @@
   "dependencies": {
     "babel-loader": "^8.2.3",
     "bulma": "^0.9.3",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
     "electron-squirrel-startup": "^1.0.0",
     "node-sass": "^7.0.1",
