--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react": "^17.0.2",
     "react-bulma-components": "^4.0.7",
     "react-dom": "^17.0.2",
+    "srt-parser-2": "^1.1.7",
     "style-loader": "^3.3.1"
   },
   "config": {
