--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.6.0",
     "electron-squirrel-startup": "^1.0.0",
+    "ffmpeg-static": "^4.4.1",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-bulma-components": "^4.1.0",
